namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: detourpilot
  labels:
    app.kubernetes.io/part-of: detourpilot
