app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end
  namespace: detourpilot
  labels:
    app.kubernetes.io/name: back-end
    app.kubernetes.io/part-of: detourpilot
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: back-end
    app.kubernetes.io/part-of: detourpilot
  ports:
    - name: http
      port: 80
      targetPort: http
